--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.1.4",
+    "cordova-android": "^7.1.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^4.0.3",
